# VKbot_for_def_company

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/bot/: handlers.py  keyboards.py  main.py  states.py
src/db/: database.py  models.py  seed.py
tests/: conftest.py  test_handlers.py
