[project]
name = "def"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrey Arshintsev",email = "arshintsev@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "vk-api (>=11.10.0,<12.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "transitions (>=0.9.3,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "ruff (>=0.14.5,<0.15.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.ruff]
# исключения директорий
exclude = [
  ".git",
  ".venv",
]
# максимальная длина строки (по умолчанию 88, как у Black)
line-length = 88

[tool.ruff.lint]
# Включаем все стандартные категории правил
select = ["E", "F", "W", "I"]

# Разрешаем автоисправление
fixable = ["ALL"]
